# ReduceProperty

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
examples/: Example_01.ovito  Example_01.py
src/ReduceProperty/: __init__.py
tests/: test_modifier.py
