[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ReduceProperty"
version = "2024.0"
description = "Apply common reduction operations to properties in the DataCollection"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ovito >= 3.11.0",
]

[project.urls]
repository = "https://github.com/ovito-org/ReduceProperty"

[project.entry-points.'OVITO.Modifier']
"Reduce Property" = "ReduceProperty:ReduceProperty"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]